# type-comment-to-hint

./: README.md  pyproject.toml
tests/: test_conversions.py
type_comment_to_hint/: transformers.py  utils.py
